--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
           xcode-version: '14.1.0'
 
       - name: UnitTests
-        run: xcodebuild test -project AppGithubActions01.xcodeproj -scheme UnitTestApp01 -sdk iphonesimulator -destination platform='iOS Simulator,name=iPhone 12,OS=16.1'
+        run: xcodebuild test -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -sdk iphonesimulator -destination platform='iOS Simulator,name=iPhone 12,OS=16.1'
 
