--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,13 @@ name: UnitTests
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
-    runs-on: macOS-latest
-
+  hello-world:
+    name: hello world job
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '14.1.0'
-
-      - name: UnitTests
-        run: xcodebuild test -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -sdk iphonesimulator -destination "platform=iOS Simulator,OS=16.1,name=iPhone 12"
-
+      - name: hello world
+        run: echo "Hello World"
