--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v2
-      - uses: maxim-lobanov/setup-xcode@v1
+      - name: setup xcode
+        uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '15.0.0'
       - name: show xcode version
