--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,5 @@ jobs:
           xcode-version: '15.0.0'
       - name: show xcode version
         run: xcodebuild -version
+      - name: xcode build
+        run: xcodebuild test -project AppGithubActions01.xcodeproj 
