--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
       - name: show xcode version
         run: xcodebuild -version
       - name: Build # シミュレーター向けにビルド
-        run: xcodebuild -sdk iphonesimulator -configuration Debug build
+        run: xcodebuild -sdk iphonesimulator -configuration Debug -destination "platform=iOS Simulator,name=iPhone 15,OS=16.1" build
