--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,7 @@ jobs:
           xcode-version: '15.0.0'
       - name: show xcode version
         run: xcodebuild -version
-      - name: Build # シミュレーター向けにビルド
+      - name: build and test
+        run: xcodebuild test -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -sdk iphonesimulator -destination platform='iOS Simulator,name=iPhone 15,OS=16.1'
+      - name: Build
         run: xcodebuild -sdk iphonesimulator -configuration Debug -destination "platform=iOS Simulator,name=iPhone 15,OS=16.1" build
