--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,5 @@ jobs:
         with:
           xcode-version: '15.0.0'
       - name: build and test
-        run: xcodebuild test -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -sdk iphonesimulator -destination platform='iOS Simulator,name=iPhone 15,OS=16.1'
+        run: xcodebuild test -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=16.1'
+
