--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,7 @@ jobs:
         with:
           xcode-version: '15.0.0'
       - name: xcode build
-        run: xcodebuild build -project AppGithubActions01.xcodeproj -scheme AppGithubActions01
+        run: xcodebuild -workspace AppGithubActions01.xcworkspace \
+              -scheme AppGithubActions01 \
+              -destination 'platform=iOS Simulator,name=iPhone 15,OS=16.1' \
+              build
