--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           xcode-version: '15.0.0'
       - name: xcode build
-        run: xcodebuild -project AppGithubActions01.xcodeproj \
-              -scheme AppGithubActions01 \
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=16.1' \
+        run: xcodebuild 
+              -project AppGithubActions01.xcodeproj
+              -scheme AppGithubActions01
+              -destination 'platform=iOS Simulator,name=iPhone 15,OS=16.1'
               build
