--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,4 @@ jobs:
         with:
           xcode-version: '15.0.1'
       - name: xcode build
-        run: xcodebuild 
-              -project AppGithubActions01.xcodeproj
-              -scheme AppGithubActions01
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=16.1'
-              build
+        run: xcodebuild -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -destination "platform=iOS Simulator,OS=16.0,name=iPhone 15" build
