--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           echo -n ${{ secrets.PROVISIONING_PROFILE }} | base64 -d > ~/Library/MobileDevice/Provisioning\ Profiles/distribution.mobileprovision
       - name: xcode build
-        run: xcodebuild -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -destination "platform=iOS Simulator,OS=16.0,name=iPhone 15" -configuration Release build
+        run: xcodebuild -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -destination "platform=iOS Simulator,OS=16.0,name=iPhone 15" -configuration build
 
