--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '15.0.1'
+      - name: xcode clean build
+        run: xcodebuild clean -project AppGithubActions01.xcodeproj
       - name: xcode build
         run: xcodebuild -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -destination "platform=iOS Simulator,OS=16.0,name=iPhone 15" -configuration Debug build
 
