--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
       - name: xcode clean build
         run: xcodebuild clean -project AppGithubActions01.xcodeproj
       - name: xcode build
-        run: xcodebuild -project AppGithubActions01.xcodeproj
-              -scheme AppGithubActions01
-              -sdk iphonesimulator
-              -configuration build
+        run: xcodebuild -project AppGithubActions01.xcodeproj \
+               -scheme AppGithubActions01 \
+               -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0' \
+              　　-configuration Debug build
 
