--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
         run: xcodebuild clean -project AppGithubActions01.xcodeproj
       - name: xcode build
         run: |
-          xcodebuild -project AppGithubActions01.xcodeproj \
+          set -o pipefail && xcodebuild -project AppGithubActions01.xcodeproj \
                      -scheme AppGithubActions01 \
                      -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0' \
-                     -configuration Debug build
+                     -configuration Debug build | bundle exec xcpretty
 
