--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
         run: xcodebuild clean -project AppGithubActions01.xcodeproj
       - name: xcode build
         run: |
-          xcodebuild -sdk iphonesimulator -configuration Debug -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0' build
+          xcodebuild clean -sdk iphonesimulator -configuration Debug -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0' build
 
