--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@ jobs:
         with:
           xcode-version: '15.0.1'
       - name: Decrypt provisioning profile
-        run: echo ${{ secrets.PROVISIONING_PROFILE }} | base64 --decode > profile.mobileprovision
+        run: |
+          echo ${{ secrets.PROVISIONING_PROFILE }} | base64 --decode > profile.mobileprovision
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          mv profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
       - name: xcode clean build
         run: xcodebuild clean -project AppGithubActions01.xcodeproj
       - name: xcode build
         run: |
           xcodebuild -sdk iphonesimulator -configuration Debug -project AppGithubActions01.xcodeproj -scheme AppGithubActions01 -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0' build
-          # プロビジョニングプロファイルを指定
-          xcodebuild -exportProvisioningProfile "com.hayate.app.AppGithubActions01" -exportPath .
-          export PROVISIONING_PROFILE="com.hayate.app.AppGithubActions01.mobileprovision"
